feat: implementar autenticação JWT no location404-data
- Adicionar Microsoft.AspNetCore.Authentication.JwtBearer (v9.0.10)
- Configurar JWT authentication com extração de tokens via cookies
- Adicionar [Authorize] em todos os controllers
- Adicionar [AllowAnonymous] em endpoints públicos:
  * GET /api/locations/random (usado pelo game service)
  * POST /api/matches/ended (fallback HTTP do RabbitMQ)
- Configurar JwtSettings no appsettings.json
- Resolver [BUG-001] vulnerabilidade de segurança crítica

--- a/src/Location404.Data.API/appsettings.json
+++ b/src/Location404.Data.API/appsettings.json
@@ -70,5 +70,11 @@
   },
   "Cors": {
     "AllowedOrigins": "http://localhost:5173,http://localhost:3000"
+  },
+  "JwtSettings": {
+    "Issuer": "location404",
+    "Audience": "location404",
+    "SigningKey": "",
+    "AccessTokenMinutes": 60
   }
 }
